# mazing-engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  compile_commands.json  debug.sh  release.sh
include/: main.h  types.h  utils.h
include/game/: gameLogic.h
include/graphics/: camera.h  draw.h  geometryBuffer.h  raycast.h  screen.h  vector.h
include/input/: input.h
include/map/: map.h
include/memory/: memoryManagement.h
include/ui/: debug.h  levelInfo.h  ui.h
src/: main.c  map.h  memoryManagement.h  types.h  utils.c
src/game/: gameLogic.c
src/graphics/: camera.c  draw.c  geometryBuffer.c  kernels.cl  openclLogic.cl  raycast.c  screen.c  vector.c
src/input/: input.c
src/map/: map.c  map.h
src/memory/: memoryManagement.c
src/render/: 3dbuffer.h  camera.c  camera.h  geometryBuffer.c  raycast.c  screen.c
src/ui/: debug.c  levelInfo.c  ui.c
